Host local instance of spellchecker
